# product-matcher

./: README.md  pyproject.toml
conf/: config.yaml
conf/experiments/problem1/: boosting.yaml  decisiontree.yaml  knn.yaml  neuralnet.yaml  svm.yaml
data/: product_matching.csv
model/problem1/: tfidf_vectorizer.pickle
notebook/: Probelm1_models.ipynb  Problem1_analysis.ipynb  Problem1_classification.ipynb  Problem1_data_prep.ipynb  Problem1_nn.ipynb  Problem1_testing.ipynb  Untitled.ipynb
product_matcher/: decisiontree.py  plotter.py  processor.py  utils.py
product_matcher/models/: decisiontree.py
